// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect the <ParallaxBanner> component to render custom child banners correctly 1`] = `
<div
  className="parallax-banner test-class"
  style={
    Object {
      "backgroundColor": "blue",
      "border": "1px solid red",
      "height": "50vh",
      "overflow": "hidden",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="parallax-outer"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="parallax-inner"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        className="parallax-banner-layer-0"
        style={
          Object {
            "bottom": "-20%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": "-20%",
          }
        }
      >
        <div>
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Expect the <ParallaxBanner> component to render image banners correctly 1`] = `
<div
  className="parallax-banner test-class"
  style={
    Object {
      "backgroundColor": "blue",
      "border": "1px solid red",
      "height": "50vh",
      "overflow": "hidden",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="parallax-outer"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="parallax-inner"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        className="parallax-banner-layer-0"
        style={
          Object {
            "backgroundImage": "url(https://foo.com/bar.jpg)",
            "backgroundPosition": "center",
            "backgroundSize": "cover",
            "bottom": "-20%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": "-20%",
          }
        }
      />
    </div>
  </div>
  <div>
    <h1>
      Foo Bar
    </h1>
  </div>
</div>
`;

exports[`Expect the <ParallaxBanner> component to render without expanded margins 1`] = `
<div
  className="parallax-banner"
  style={
    Object {
      "height": "50vh",
      "overflow": "hidden",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="parallax-outer"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="parallax-inner"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        className="parallax-banner-layer-0"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div>
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;
